--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-    "liveServer.settings.port": 5501
-    "liveServer.settings.root": "/Iphone-Mock"
+    "liveServer.settings.port": 5501,
+    "liveServer.settings.root": "/",
+    "liveServer.settings.mount": [
+    ["/Iphone-Mock", "./"]
+  ]
 }
